add container orchestrator in feature flag (#8015)
* it's working

* clean up process factory

* fix and add tests

* clarify airbyte_default

* fix build

* fix kube acceptance test (maybe)

* oops

* fix output prop issue

* fix output propagation regression

* fix kube singleton problem

* sync passing on kube but getting wrong exit code of 7

* misc

* fix port usage

* remove host port that causes conflicts

* eliminate envconfigs static usage

* this took way too long to figure out

* get rid of annoying ==== this is new log messages

* finally successfully completing syncs

* stop using magic strings and clean up logging

* misc minor cleanups

* fmt

* misc

* correct

* misc fixes

* rename + misc

* better logs

* logging fix 1

* logging fix 1 -- fixed

* finally get logging working nicely

* add comment for simplification

* fmt

* misc

* fmt

* break into separate class

* remove comment

* remove flaky multi-node testing

* try to fix connector build

* remove separate node check

* switch to new configs type

* fix regression from logging config changes

* only log path one time

* remove misleading setting terminology

* fix connector build

* fix earlier merge conflict

* fix runtime kubernetes bug

* fix connector build (again)

* greatly simplify logging config by forcing the container-orchestrator to use default (non-job) logging

* add secret insertion for orchestrator on kube

* fix k8s ports

* add four ports

* fix logging test regression

* temporarily disable kube tests to check logging

* improve comments

* make Docker run more secure by limiting env vars transferred

* re-enable kubernetes tests

* fix conflict

* fix docker launching

* revert temporal hacks

* match master

* fix typo

* remove completed todo

* fix conflict

* increase memory requirement to something reasonable

* Update airbyte-container-orch