@@ -16,12 +16,14 @@ import io.airbyte.commons.logging.MdcScope.Builder;
 import io.airbyte.config.OperatorDbt;
 import io.airbyte.config.ResourceRequirements;
 import io.airbyte.protocol.models.ConfiguredAirbyteCatalog;
+import io.airbyte.workers.WorkerConfigs;
 import io.airbyte.workers.WorkerConstants;
 import io.airbyte.workers.WorkerException;
 import io.airbyte.workers.WorkerUtils;
 import io.airbyte.workers.process.KubeProcessFactory;
 import io.airbyte.workers.process.ProcessFactory;
 import java.nio.file.Path;
+import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import org.slf4j.Logger;
@@ -32,8 +34,9 @@ public class DefaultNormalizationRunner implements NormalizationRunner {
   private static final Logger LOGGER = LoggerFactory.getLogger(DefaultNormalizationRunner.class);
   private static final MdcScope.Builder CONTAINER_LOG_MDC_BUILDER = new Builder()
       .setLogPrefix("normalization")
-      .setPrefixColor(Color.GREEN);
+      .setPrefixColor(Color.GREEN_BACKGROUND);
 
+  private final WorkerConfigs workerConfigs;
   private final DestinationType destinationType;
   private final ProcessFactory processFactory;
   private final String normalizationImageName;
@@ -51,7 +54,11 @@ public class DefaultNormalizationRunner implements NormalizationRunner {
     CLICKHOUSE
   }
 
-  public DefaultNormalizationRunner(final DestinationType destinationType, final ProcessFactory processFactory, final String normalizationImageName) {
+  public DefaultNormalizationRunner(final WorkerConfigs workerConfigs,
+                                    final DestinationType destinationType,
+                                    final ProcessFactory processFactory,
+                                    final String normalizationImageName) {
+    this.workerConfigs = workerConfigs;
     this.destinationType = destinationType;
     this.processFactory = processFactory;
     this.normalizationImageName = normalizationImageName;
@@ -113,8 +120,17 @@ public class DefaultNormalizationRunner implements NormalizationRunner {
       throws Exception {
     try {
       LOGGER.info("Running with normalization version: {}", normalizationImageName);
-      process = processFactory.create(jobId, attempt, jobRoot, normalizationImageName, false, files, null, resourceRequirements,
-          Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.SYNC_JOB, KubeProcessFactory.SYNC_STEP, KubeProcessFactory.NORMALISE_STEP), args);
+      process = processFactory.create(
+          jobId,
+          attempt,
+          jobRoot,
+          normalizationImageName,
+          false, files,
+          null,
+          resourceRequirements,
+          Map.of(KubeProcessFactory.JOB_TYPE, KubeProcessFactory.SYNC_JOB, KubeProcessFactory.SYNC_STEP, KubeProcessFactory.NORMALISE_STEP),
+          Collections.emptyMap(),
+          args);
 
       LineGobbler.gobble(process.getInputStream(), LOGGER::info, CONTAINER_LOG_MDC_BUILDER);
       LineGobbler.gobble(process.getErrorStream(), LOGGER::error, CONTAINER_LOG_MDC_BUILDER);
@@ -138,7 +154,7 @@ public class DefaultNormalizationRunner implements NormalizationRunner {
     }
 
     LOGGER.debug("Closing normalization process");
-    WorkerUtils.gentleClose(process, 1, TimeUnit.MINUTES);
+    WorkerUtils.gentleClose(workerConfigs, process, 1, TimeUnit.MINUTES);
     if (process.isAlive() || process.exitValue() != 0) {
       throw new WorkerException("Normalization process wasn't successful");
     }
